# max_102_rgb

./: pyproject.toml  requirements.txt
dummy_tests/: brightness.py  device_path.txt  music_sync.py  per_key_rgb.txt  rgb_test.py
examples/: music_sync.py  test_brightness.py  test_connection.py  test_wasd.py
max102/: __init__.py  audio.py  colors.py  constants.py  device.py  keymap.py  protocol.py
max102/effects/: music_sync.py
