[project]
name = "max102-rgb"
version = "0.1.0"
description = "Python SDK for Weikav MAX102 RGB Control"
authors = [
    {name = "Arun"}
]

dependencies = [
    "hidapi",
    "numpy",
    "PyAudioWPatch"
]

requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"